--- a/JSONfiles/NetworkProject_0.JSON
+++ b/JSONfiles/NetworkProject_0.JSON
@@ -1,12 +1,12 @@
 {
 "numNodes": "6",
 "nodes": [
-	{ "name": "0", "status": []},
-	{ "name": "1", "status": []},
-	{ "name": "2", "status": []},
-	{ "name": "3", "status": []},
-	{ "name": "4", "status": []},
-	{ "name": "5", "status": []}
+	{ "name": "0", "status": [0, 0, 1]},
+	{ "name": "1", "status": [0, 2, 3]},
+	{ "name": "2", "status": [0, 0, 0]},
+	{ "name": "3", "status": [0, 1, 2]},
+	{ "name": "4", "status": [0, 0, 0]},
+	{ "name": "5", "status": [0, 0, 0]}
 ],
 "links": [
 	{ "source": "0","target": "3"},
